modify class btn

--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ main {
     transition: 0.25s;
 }
 
-.btn{
+.btn2{
     background: linear-gradient(94.47deg, #06496E -16.48%, #4698C7 106.04%);
 }
 
