--- a/css/dark.css
+++ b/css/dark.css
@@ -47,7 +47,7 @@ body.dark .button{
     box-shadow: 0px 0px 5px 0px rgba(255, 255, 255, 0.25);
 }
 
-body.dark .btn{
+body.dark .btn2{
     background: linear-gradient(94.47deg, #EDA6A7 -16.48%, #AAB1E5 49.36%);
 }
 
