--- a/css/styles.css
+++ b/css/styles.css
@@ -379,7 +379,7 @@ main {
 }
 
 .cardSocial {
-    width: calc(var(--hmain)*.35);
+    width: calc(var(--hmain)*.33);
     height: calc(var(--hmain)*.42);
     box-shadow: 0px 0px calc(var(--hmain)*.05) rgba(0, 0, 0, 0.25);
     border-radius: calc(var(--hmain)*.04);
@@ -652,12 +652,7 @@ footer .rights{
     .cardSocial p{
         font-size: calc(var(--hmain)*.018);
     }
-
-    .logoFooter img{
-        height: calc(var(--hmain)*.05);
-        width: calc(var(--hmain)*.19);
-    }
-    
+  
     .logoFooter p, .rights p {
         
         font-size: calc(var(--hmain)*.02);
@@ -727,18 +722,21 @@ footer .rights{
     .social{
         margin: 5% 5%;
     }
+    .groupSocial{
+        gap: 30px;
+    }
     
     .cardSocial{
-        width: 260px;
+        width: 240px;
         height: 300px;
         border-radius: 20px;
     }
 
-.cardSocial img {
-    width: calc(var(--hmain)*.085);
-    height: calc(var(--hmain)*.085);
-    border-radius: 15%;
-}
+    .cardSocial img {
+        width: 60px;
+        height: 60px;
+        border-radius: 15%;
+    }
 
 
     footer {
@@ -766,11 +764,15 @@ footer .rights{
 
 /* 3 Tablet Landscape */
 
-@media (max-width: 1140px) and (orientation: landscape){
+@media (max-width: 1200px) and (orientation: landscape){
 
-.social{
-    margin: 5% 15%;
-}
+    .groupSocial{
+        gap: 60px;
+    }
+
+    .social{
+        margin: 5% 20%;
+    }
 }
 
 /* 3  */
@@ -895,14 +897,25 @@ footer .rights{
         width: calc(var(--hmain)*.62);
         height: calc(var(--hmain)*.75);
     }
+
+    .social{
+        margin: 5% 5%;
+    }
  
     .groupSocial {
         gap: calc(var(--hmain)*.15);
     }
 
-    .cardSocial {
-        width: calc(var(--hmain)*.6);
-        height: calc(var(--hmain)*.75);
+    .cardSocial{
+        width: 220px;
+        height: 240px;
+        border-radius: 20px;
+    }
+
+    .cardSocial img {
+        width: 60px;
+        height: 60px;
+        border-radius: 15%;
     }
 
     .cardSocial h3{
@@ -915,10 +928,6 @@ footer .rights{
         font-size: calc(var(--pscard));
     }
 
-    .cardSocial img {
-        width: calc(var(--hmain)*.15);
-        height: calc(var(--hmain)*.15);
-    }
 
     footer {
         flex-direction: column;
@@ -1090,6 +1099,7 @@ footer .rights{
         box-shadow: 0px 0px calc(var(--hmain)*.025) rgba(0, 0, 0, 0.25);
     }
 
+
     .cardSocial h3{
         font-size: calc(var(--titleCardS));
         margin: 60px 0;
@@ -1097,6 +1107,11 @@ footer .rights{
 
     .cardSocial p{
         font-size: calc(var(--pscard));
+    }
+
+    .cardSocial img {
+        width: calc(var(--hmain)*.1);
+        height: calc(var(--hmain)*.1);
     }
 
     .cardClient {
