--- a/team/css/styles.css
+++ b/team/css/styles.css
@@ -59,6 +59,7 @@ header nav .switch i img {
 header nav .switch i:first-child img{
     height: calc(var(--hmain)*.032);
     width: calc(var(--hmain)*.032);
+    margin: calc(var(--hmain)*.004) calc(var(--hmain)*.004);
 }
 
 /*  --- Background --- */
@@ -157,7 +158,7 @@ header nav i img {
     }
     
     .gruopCards{
-        width: 87%;
+        width: 100%; /* 87% */
         display: flex;
         justify-content: center;
         gap: 45px;
@@ -166,8 +167,8 @@ header nav i img {
 
     .card {
         background: linear-gradient(180deg, #E3F3FB 0%, #E7F5FB 100%);
-        width: 260px;
-        height: 350px;
+        width: calc((100% - 45px)/5); /* 260px */
+        /* height 350px*/
         border-radius: 7px;
         transition: 0.25s;
     }
@@ -384,8 +385,8 @@ header nav i img {
     }
 
     .card {
-        width: calc(var(--hmain)*.27); /*.34*/
-        height: auto;
+        width: calc((100% - 45px)/5); /* .27--.34 */
+        
         border-radius: calc(var(--hmain)*.008); /*.01*/
     }
 
@@ -447,8 +448,15 @@ header nav i img {
 
 /* 2 */
 
-@media (max-width: 1400px) and (orientation: landscape){
+@media (max-width: 1499px) and (orientation: landscape){
 
+    .gruopCards{
+        width: 85%; /* 87% */
+    }
+    .card {
+        width: 260px; /* 260px */
+        /* height 350px*/
+    }
 
     footer {
         flex-direction: column;
@@ -516,6 +524,7 @@ header nav i img {
     header nav .switch i:first-child img{
         height: calc(var(--hmain)*.052);
         width: calc(var(--hmain)*.052);
+        margin: calc(var(--hmain)*.004) calc(var(--hmain)*.004);
     }
 
     .menu {
